# RustyWallpaperChanger

./: readme.md
rusty_wallpaper_changer/: Cargo.toml
rusty_wallpaper_changer/src/: main.rs
wallpaper/: Cargo.toml
wallpaper/src/: lib.rs  windows.rs
