[package]
name = "rusty_wallpaper_changer"
version = "0.1.0"
authors = ["ichi0915 <ichi0915@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
wallpaper = { version = "2.0.1", path = "../wallpaper" }
